fix invisible links in code blocs

--- a/src/assets/stylesheets/_default.scss
+++ b/src/assets/stylesheets/_default.scss
@@ -2123,3 +2123,8 @@ header {
   font-size: 12px;
   padding: 15px;
 }
+
+.content pre code a {
+    color: inherit;
+    font-size: inherit !important;
+}
